--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-share": "^4.4.0",
     "redux": "^4.0.5",
     "sass": "^1.32.8",
+    "scss": "^0.2.4",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
